# Singleton

./: CMakeLists.txt  README.md  Singleton.hpp  config.h  singleton.h  singleton_config.h  xmake.lua
.github/: FUNDING.yml
